# schwab-readonly-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
scripts/: authorize.py
src/schwab_readonly_mcp/: __init__.py  auth.py  client.py  server.py
tests/: conftest.py  test_auth.py  test_authorize.py  test_client.py  test_server.py
