[project]
name = "schwab-readonly-mcp"
version = "0.1.0"
description = "Minimal, auditable, read-only MCP server exposing a Charles Schwab brokerage account to Claude Code."
readme = "README.md"
authors = [
    { name = "dylancm4", email = "dylan.christopher.miller@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "keyring==25.7.0",
    "mcp==1.27.1",
]

[project.scripts]
schwab-readonly-mcp = "schwab_readonly_mcp:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
]
